# utxo-z

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/actions/determine-version/: action.yml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_common.hpp  bench_erase.cpp  bench_find.cpp  bench_insert.cpp  bench_large_ibd.cpp  bench_large_main.cpp  bench_large_ops.cpp  bench_main.cpp  bench_mixed_workload.cpp  bench_storage.cpp  storage_overhead_report.cpp
cmake/: utxoz-config.cmake.in
dev/bench/: data.js
doc/release-notes/: release-notes.md
examples/: CMakeLists.txt  adapted_benchmark.cpp  basic_usage.cpp  blockchain_processing.cpp  logging_example.cpp
include/utxoz/: aliases.hpp  config.hpp.in  database.hpp  literals.hpp  logging.hpp  statistics.hpp  types.hpp  utils.hpp  utxoz.hpp  version.hpp  version.hpp.in
legacy/: bench_db.cpp  interprocess_multiple_v12.hpp  interprocess_multiple_v12_full.hpp
scripts/: build-create.sh  build-sanitizer.sh  build-wasm.sh  build.sh  convert_nanobench_json.py  diff-boost-fork.py  fork_boost_unordered.py  post-release.sh  rebuild.sh  release.sh  rollback-release.sh
src/: database.cpp  database_impl.cpp  log.cpp  statistics.cpp  utils.cpp
src/detail/: database_impl.hpp  file_cache.hpp  file_metadata.hpp  log.hpp  mapped_segment.hpp  utxo_value.hpp
src/utxoz/flatmap/: concurrent_flat_map_fwd.hpp  mmap_flat_map.hpp  mmap_flat_map_fwd.hpp
src/utxoz/flatmap/detail/: allocator_constructed.hpp  core.hpp  cumulative_stats.hpp  element_type.hpp  flat_map_types.hpp  ignore_wshadow.hpp  mulx.hpp  narrow_cast.hpp  opt_storage.hpp  reentrancy_check.hpp  restore_wshadow.hpp  rw_spinlock.hpp  static_assert.hpp  table.hpp  throw_exception.hpp  tuple_rotate_right.hpp  type_traits.hpp  types_constructibility.hpp  unordered_printers.hpp
tests/: CMakeLists.txt  test_compact_mode.cpp  test_database.cpp  test_storage_correctness.cpp
